# MeneOS

./: .axconfig.old.toml  .env  .gitignore  .gitmodules  ARCHITECTURE_REVIEW.md  Capability_Passing_Plan.md  Cargo.toml  Kernel.md  User_Space_Virtio_FS_Design.md
.claude/: settings.local.json
apps/: Cargo.toml  boot.cfg  boot.toml
apps/fs/: Cargo.toml
apps/fs/src/: main.rs
apps/helloworld/: Cargo.toml
apps/helloworld/src/: main.rs
apps/init/src/: main.rs
apps/serial/: Cargo.toml
apps/serial/src/: main.rs
apps/syscall_compat/: Cargo.toml
apps/syscall_compat/src/: main.rs
apps/ulib/: Cargo.toml
apps/ulib/src/: lib.rs
apps/virtio_blk/: Cargo.toml
apps/virtio_blk/src/: main.rs
apps/vmm/: Cargo.toml
apps/vmm/src/: main.rs
docs/: KERNEL_PRIMITIVES.md  MODULE_BOUNDARIES.md  PHASE2_SUMMARY.md
entry/: Cargo.toml
entry/src/: main.rs
kernel/mene-abi/: Cargo.toml
kernel/mene-abi/src/: lib.rs
kernel/mene-config/: Cargo.toml
kernel/mene-config/src/: lib.rs
kernel/mene-init/: Cargo.toml
kernel/mene-init/src/: lib.rs
kernel/mene-init/src/mm/: loader.rs
kernel/mene-ipc/: Cargo.toml
kernel/mene-ipc/src/: capability.rs  endpoint.rs  lib.rs  manager.rs  message.rs
kernel/mene-kernel/: Cargo.toml
kernel/mene-kernel/src/: lib.rs
kernel/mene-kernel/src/device/: mod.rs
kernel/mene-kernel/src/ipc/: mod.rs  protocol.rs
kernel/mene-kernel/src/process/: lifecycle.rs  mod.rs
kernel/mene-kernel/src/service/: mod.rs  registry.rs  scheduler.rs
kernel/mene-memory/: Cargo.toml
kernel/mene-memory/src/: lib.rs  mmap.rs
kernel/mene-syscall/: Cargo.toml
kernel/mene-syscall/src/: lib.rs
kernel/mene-task/: Cargo.toml
kernel/mene-task/src/: lib.rs  task.rs
kernel/mene-trap/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: app.rs  cli.rs  context.rs  error.rs  main.rs  make.rs
xtask/src/commands/: build.rs  mene_rootfs.rs  mod.rs  run.rs
