[package]
name = "entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MeneOS Entry Crate"
license.workspace = true
homepage.workspace = true

[features]
qemu = []

[dependencies]
axtask = { workspace = true }
axruntime = { workspace = true, features = ["alloc", "fs", "paging", "multitask", "irq", "axdriver"] }
axfs = { workspace = true }
axlog = { workspace = true }
axfeat = { workspace = true, features = ["alloc", "fs", "paging", "multitask", "irq", "sched-rr", "axdriver", "fp-simd"] }


mene-init = { path = "../kernel/mene-init" }
