[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Workspace automation tasks for MeneOS"

[dependencies]
clap = { version = "4", features = ["derive"] }
duct = "1.1.1"