[package]
name = "mene-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
axmm = { workspace = true, features = ["copy"] }
memory_addr = "0.4"
axlog.workspace = true

mene-config = { version = "0.1.0", path = "../mene-config" }
axsync = { workspace = true }
axhal.workspace = true
axalloc.workspace = true
