[package]
name = "mene-syscall"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat = { workspace = true, features = ["alloc-slab", "sched-rr", "uspace"] }
axlog.workspace = true
axtask.workspace = true
axhal.workspace = true
axerrno = "0.2"
mene-abi = { path = "../mene-abi" }
mene-ipc = { path = "../mene-ipc" }
mene-kernel = { path = "../mene-kernel" }
mene-task = { path = "../mene-task" }
mene-memory = { path = "../mene-memory" }

axfs.workspace = true
axmm = { workspace = true, features = ["copy"] }
xmas-elf = "0.9"
memory_addr = "0.4"
kspin = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
axsync = { workspace = true }
mene-config = { version = "0.1.0", path = "../mene-config" }
