[package]
name = "mene-task"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
axfeat = { workspace = true, features = ["alloc-slab", "sched-rr", "uspace"] }
axtask.workspace = true
axhal.workspace = true
axlog.workspace = true
xmas-elf = "0.9"

mene-memory = { version = "0.1.0", path = "../mene-memory" }
mene-ipc = { version = "0.1.0", path = "../mene-ipc" }
mene-config = { version = "0.1.0", path = "../mene-config" }

axfs.workspace = true
axmm = { workspace = true, features = ["copy"] }
memory_addr = "0.4"
axsync = { workspace = true }
