[package]
name = "mene-trap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
axhal.workspace = true
axlog.workspace = true

mene-task = { version = "0.1.0", path = "../mene-task" }
mene-ipc = { version = "0.1.0", path = "../mene-ipc" }
